--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -23,6 +23,7 @@
     "pnpm": ">=6.0.0"
   },
   "dependencies": {
-    "firebase": "^11.0.1"
+    "firebase": "^11.0.1",
+    "zod": "^3.24.2"
   }
 }
