--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@firebase-monorepo/common",
+  "name": "@smarepo/common",
   "version": "0.0.0",
   "publishConfig": {
     "access": "public"
