--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,6 @@
 {
   "projects": {
-    "default": "smash-bros-analytics"
+    "default": "smash-bros-analytics",
+    "develop": "smarepo-dev"
   }
 }
