--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,12 +31,15 @@
     "react-dom": "19.1.0",
     "react-hook-form": "7.55.0",
     "react-icons": "^5.5.0",
+    "react-image-crop": "^11.0.10",
+    "uuid": "^13.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
     "@types/react": "19.0.12",
     "@types/react-dom": "19.0.4",
+    "@types/uuid": "^11.0.0",
     "eslint-config-next": "^15.2.4",
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.4",
