--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -4,10 +4,10 @@
   "private": true,
   "scripts": {
     "lint:tsc": "tsc --noEmit",
-    "lint:eslint": "eslint --ext .js,.ts .",
-    "lint:prettier": "prettier --check src",
+    "lint:biome": "biome lint ./src",
     "lint:cspell": "cspell -c ../../cspell.json src/**/*",
-    "pre-build": "tsc --noEmit && babel src -d lib --extensions .ts",
+    "pre-build": "tsup",
+    "tsc": "tsc",
     "deploy": "firebase deploy --only functions",
     "logs": "firebase functions:log"
   },
@@ -17,8 +17,8 @@
     "express": "^4.21.2",
     "express-promise-router": "^4.1.1",
     "express-validator": "^7.2.1",
-    "firebase-admin": "^13.2.0",
-    "firebase-functions": "^6.3.2"
+    "firebase-admin": "^13.4.0",
+    "firebase-functions": "^6.4.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.27.0",
@@ -30,10 +30,12 @@
     "@types/node": "^20.11.3",
     "@types/request-promise": "^4.1.51",
     "babel-plugin-module-resolver": "^5.0.2",
+    "source-map-support": "^0.5.21",
+    "tsup": "^8.5.0",
     "typescript": "5.3.3"
   },
   "engines": {
-    "node": ">=20",
+    "node": "20",
     "pnpm": ">=6.0.0"
   }
 }
