--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -12,6 +12,10 @@
     "test": "vitest"
   },
   "main": "./src/index.ts",
+  "dependencies": {
+    "firebase": "^11.0.1",
+    "zod": "^3.24.2"
+  },
   "devDependencies": {
     "@firebase/rules-unit-testing": "^4.0.0",
     "@types/node": "20",
@@ -19,11 +23,7 @@
     "vitest": "^2.1.3"
   },
   "engines": {
-    "node": ">=20",
+    "node": "20",
     "pnpm": ">=6.0.0"
-  },
-  "dependencies": {
-    "firebase": "^11.0.1",
-    "zod": "^3.24.2"
   }
 }
