--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -26,6 +26,7 @@
     "classnames": "^2.5.1",
     "dayjs": "^1.11.13",
     "firebase": "^11.5.0",
+    "firebase-admin": "^13.6.0",
     "next": "15.2.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
