--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -15,6 +15,7 @@
     "clean": "rimraf -rf .turbo node_modules .next"
   },
   "dependencies": {
+    "@fontsource/noto-sans-jp": "^5.2.8",
     "@hookform/resolvers": "^4.1.3",
     "@mantine/core": "^7.17.3",
     "@mantine/dates": "^7.17.3",
