--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -14,6 +14,7 @@
   "main": "./src/index.ts",
   "dependencies": {
     "firebase": "^11.0.1",
+    "firebase-admin": "^13.6.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
